[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
# 基础元信息
name = "meminspect"
version = "0.1.0"
authors = [{name = "Ricardo", email = "13838152117@139.com"}]
readme = "README.md"
requires-python = ">=3.10.19"


description = "Native Python memory tool to track full code memory changes with function/class-level visibility"


# 许可证
license = {text = "MIT"}



# 项目链接
urls = {
    "Homepage" = "https://github.com/Ricardo-shuo-liu/meminspect",
    "Bug Tracker" = "https://github.com/Ricardo-shuo-liu/meminspect/issues"
}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",   
    "build>=1.0.3",
    "twine>=4.0.2"
]
[tool.setuptools]
packages.find = { 
    where = ["."],         
    include = ["meminspect*"],   
    exclude = ["tests*"]   
}
include-package-data = true

